# NanoTekSpice

./: .gitignore  CMakeLists.txt  README.md  UML.wsd
.github/workflows/: test.yaml
MSVC_DEPS/criterion/lib/: criterion.lib
bonus/include/: GraphicShell.hpp  Tools.hpp
bonus/src/: GraphicShell.cpp  Tools.cpp
components/GateComponents/: 4001.nts  4011.nts  4030.nts  4069.nts  4071.nts  4081.nts
components/GateComponents/Gates/: and.nts  buffer.nts  nor.nts  not.nts  nxor.nts  or.nts  tristate.nts  xor.nts
components/LogicComponents/: 4008.nts  4013.nts  4017.nts  4040.nts  4040_gates.nts  4094.nts  4512.nts  4514.nts
examples/: and.nts
examples/nts_single/: 4013_flipflop.nts  4017_johnson.nts  4801_ram.nts
examples/subject_sample/: clock.nts  example_1.txt  example_2.txt  example_3.txt
include/: ComponentFactory.hpp  NanoTekSpice.hpp  NtsException.hpp  Tristate.hpp
include/Components/: AComponent.hpp  Circuit.hpp  Components.hpp  IComponent.hpp  Pin.hpp
include/Components/GateComponents/: Nand.hpp  Tristate_core.hpp
include/Components/LogicComponents/: C2716.hpp  C4040_core.hpp  C4094_core.hpp  C4801.hpp
include/Parser/: Blueprint.hpp  Parser.hpp
include/Shell/: IShell.hpp  InteractiveShell.hpp
src/: InteractiveShell.cpp  Tristate.cpp  main.cpp
src/ComponentFactory/: ComponentFactory.cpp  ComponentFactoryLoader.cpp
src/Components/: AComponent.cpp  Circuit.cpp  Pin.cpp
src/Components/GateComponents/: Nand.cpp  Tristate_core.cpp
src/Components/LogicComponents/: C2716.cpp  C4040_core.cpp  C4094_core.cpp  C4801.cpp
src/Parser/: Blueprint.cpp  Parser.cpp
tests/: tests_Component.cpp  tests_Component.hpp  tests_ComponentFactory.cpp  tests_Gate.cpp  tests_GateComponent.cpp  tests_LogicComponent.cpp  tests_LogicComponentUnit.cpp  tests_Parser.cpp
tests/circuits/invalids/: invalid_chipsets_section_content_1.nts  invalid_chipsets_section_content_2.nts  invalid_links_section_content_1.nts  invalid_links_section_content_2.nts  invalid_links_section_content_3.nts  invalid_links_section_content_4.nts  invalid_links_section_content_5.nts  invalid_pin_1.nts  invalid_pin_2.nts  invalid_pin_3.nts  invalid_pin_4.nts  invalid_rom_1.nts  invalid_rom_2.nts  invalid_section.nts  invalid_value_1.nts  invalid_value_2.nts  invalid_value_format_1.nts  invalid_value_format_2.nts  invalid_value_format_3.nts  unknown_name.nts  (+9 more)
(+35 files in other folders)
